Add Previous Question navigation

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,10 @@
             </div>
         </div>
         
-        <div class="text-center">
+        <div class="text-center flex justify-center gap-4">
+            <button id="prevQuestionBtn" class="btn-primary text-white font-bold py-4 px-8 rounded-full text-lg shadow-lg hidden">
+                <i class="fas fa-arrow-left mr-2"></i> Previous Question
+            </button>
             <button id="getQuestionBtn" class="btn-primary text-white font-bold py-4 px-8 rounded-full text-lg shadow-lg pulse">
                 <i class="fas fa-random mr-2"></i> Get Random Question
             </button>
