--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,8 @@
         <div id="exhaustedBanner" class="hidden mb-3 text-sm text-indigo-800 bg-indigo-100 border border-indigo-200 rounded px-3 py-2 flex items-center justify-between">
             <span>All questions covered</span>
             <div class="flex items-center gap-2">
-                <button id="exhaustResetBtn" class="px-3 py-1 rounded border border-indigo-300 text-indigo-700 bg-white">Reset session</button>
-                <button id="exhaustNewBtn" class="px-3 py-1 rounded bg-indigo-600 text-white">Start new session</button>
+                <button id="exhaustResetBtn" class="btn-primary text-white px-3 py-1 rounded">Reset session</button>
+                <button id="exhaustNewBtn" class="btn-primary text-white px-3 py-1 rounded">Start new session</button>
             </div>
         </div>
         
