Fix: remove hover translate on .btn-primary to prevent Next button misalignment

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         }
         
         .btn-primary:hover {
-            transform: translateY(-2px);
+            /* Avoid overriding Tailwind transform used for centering (-translate-x-1/2) */
             box-shadow: 0 10px 15px -3px rgba(99, 102, 241, 0.3);
         }
         
