UX: align Next with Undo on md+ screens via md:transform-none

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="text-center flex justify-center gap-4 flex-wrap md:static md:pb-0 pb-20">
-                    <button id="nextBtn" class="btn-primary text-white font-bold py-4 px-8 rounded-full text-lg shadow-lg md:static fixed left-1/2 -translate-x-1/2 bottom-4">
+                    <button id="nextBtn" class="btn-primary text-white font-bold py-4 px-8 rounded-full text-lg shadow-lg md:static md:transform-none fixed left-1/2 -translate-x-1/2 bottom-4">
                         <i class="fas fa-random mr-2"></i> Next
                     </button>
                     <button id="undoBtn" class="btn-primary text-white font-bold py-4 px-8 rounded-full text-lg shadow-lg disabled:opacity-50" disabled>
