--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manager Feedback Questions</title>
+    <meta name="referrer" content="no-referrer">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -61,6 +62,10 @@
         <div class="text-center mb-8">
             <h1 class="text-4xl md:text-5xl font-bold text-indigo-600 mb-2">Manager Feedback Questions</h1>
             <p class="text-gray-600 text-lg">Get questions to improve your management and team dynamics</p>
+            <div id="adminBanner" class="hidden mt-2 text-xs text-white bg-indigo-600 inline-flex items-center gap-2 px-2 py-1 rounded">
+                <span>Admin mode</span>
+                <button id="adminSetupBtn" class="bg-white text-indigo-700 px-1 py-0.5 rounded">Setup</button>
+            </div>
         </div>
         
         <div class="mb-6" id="session-section"></div>
@@ -112,5 +117,29 @@
     <script src="askedList.js"></script>
     <script src="sessionPicker.js"></script>
     <script src="script.js"></script>
+    <script>
+      (function(){
+        try {
+          const u = new URL(window.location.href);
+          if (u.searchParams.get('admin') === '1') {
+            const banner = document.getElementById('adminBanner');
+            if (banner) banner.classList.remove('hidden');
+            const btn = document.getElementById('adminSetupBtn');
+            if (btn) btn.addEventListener('click', async () => {
+              const existing = sessionStorage.getItem('mfq_admin_key') || '';
+              const key = prompt('Enter admin key', existing) || '';
+              if (!key) return;
+              sessionStorage.setItem('mfq_admin_key', key);
+              // fetch list
+              const res = await fetch('/api/admin/sessions', { headers: { Authorization: 'Key ' + key } });
+              if (!res.ok) { alert('Admin key invalid'); return; }
+              const json = await res.json();
+              const names = (json.sessions || []).map(s => `${s.name} — ${new Date(s.lastAccess||s.createdAt||Date.now()).toLocaleString()}`);
+              alert(['Admin OK. Sessions:', ''].concat(names).join('\n'));
+            });
+          }
+        } catch {}
+      })();
+    </script>
 </body>
 </html>
