--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,6 @@
             <p class="text-gray-600 text-lg">Get questions to improve your management and team dynamics</p>
             <div id="adminBanner" class="hidden mt-2 text-xs text-white bg-indigo-600 inline-flex items-center gap-2 px-2 py-1 rounded">
                 <span>Admin mode</span>
-                <button id="adminSetupBtn" class="bg-white text-indigo-700 px-1 py-0.5 rounded">Setup</button>
             </div>
         </div>
         
@@ -124,19 +123,9 @@
           if (u.searchParams.get('admin') === '1') {
             const banner = document.getElementById('adminBanner');
             if (banner) banner.classList.remove('hidden');
-            const btn = document.getElementById('adminSetupBtn');
-            if (btn) btn.addEventListener('click', async () => {
-              const existing = sessionStorage.getItem('mfq_admin_key') || '';
-              const key = prompt('Enter admin key', existing) || '';
-              if (!key) return;
-              sessionStorage.setItem('mfq_admin_key', key);
-              // fetch list
-              const res = await fetch('/api/admin/sessions', { headers: { Authorization: 'Key ' + key } });
-              if (!res.ok) { alert('Admin key invalid'); return; }
-              const json = await res.json();
-              const names = (json.sessions || []).map(s => `${s.name} — ${new Date(s.lastAccess||s.createdAt||Date.now()).toLocaleString()}`);
-              alert(['Admin OK. Sessions:', ''].concat(names).join('\n'));
-            });
+            if (window.AdminUI && typeof window.AdminUI.init === 'function') {
+              window.AdminUI.init();
+            }
           }
         } catch {}
       })();
