Refactor session API, update tests, and clean up data
Removed obsolete and redundant test files, added new tests for sessionApi, and updated admin and capability session API endpoints to remove the 'cap=1' query parameter from generated links. Updated session data to reflect new test runs and cleaned up legacy entries. Also ensured sessionApi.js is loaded in the UI and required in relevant test and UI files.

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
     <script src="sessionStore.js"></script>
     <script src="selectionUtils.js"></script>
     <script src="askedList.js"></script>
+    <script src="sessionApi.js"></script>
     <script src="sessionPicker.js"></script>
     <script src="script.js"></script>
     <script>
